tests/snapshots/help_snapshots__noun_help@jwt.snap
---
source: tests/help_snapshots.rs
expression: out
---
JSON Web Token decode and verify (HS*, RS*, ES*)

Usage: ubertool jwt [OPTIONS] <COMMAND>

Commands:
  decode  Decode a JWT without verifying its signature
  verify  Verify a JWT signature (HS256/384/512 or RS256/384/512 or ES256/384)
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
