tests/snapshots/help_snapshots__noun_help@list.snap
---
source: tests/help_snapshots.rs
expression: out
---
List separator conversion (comma/newline/space/tab/semicolon/pipe)

Usage: ubertool list [OPTIONS] <COMMAND>

Commands:
  convert  Convert a list between separator styles, optionally trimming/deduping/sorting
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
