tests/snapshots/help_snapshots__noun_help@markdown.snap
---
source: tests/help_snapshots.rs
expression: out
---
Markdown to HTML conversion (CommonMark)

Usage: ubertool markdown [OPTIONS] <COMMAND>

Commands:
  to-html  Render Markdown as HTML
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
