tests/snapshots/help_snapshots__noun_help@math.snap
---
source: tests/help_snapshots.rs
expression: out
---
Math expression evaluator (evalexpr)

Usage: ubertool math [OPTIONS] <COMMAND>

Commands:
  eval  Evaluate a math expression
  help  Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
