tests/snapshots/help_snapshots__noun_help@mime.snap
---
source: tests/help_snapshots.rs
expression: out
---
MIME type lookup from file extension or filename

Usage: ubertool mime [OPTIONS] <COMMAND>

Commands:
  lookup  Look up the MIME type for a file extension or filename
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
