tests/snapshots/help_snapshots__noun_help@numeronym.snap
---
source: tests/help_snapshots.rs
expression: out
---
Numeronym generator (i18n-style contraction)

Usage: ubertool numeronym [OPTIONS] <COMMAND>

Commands:
  generate  Generate a numeronym (e.g., 'internationalization' -> 'i18n')
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
