tests/snapshots/help_snapshots__noun_help@otp.snap
---
source: tests/help_snapshots.rs
expression: out
---
Time-based One-Time Password generation and validation (TOTP, RFC 6238)

Usage: ubertool otp [OPTIONS] <COMMAND>

Commands:
  generate  Generate the current TOTP code from a base32 secret
  validate  Validate a TOTP code against the current time window
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
