tests/snapshots/help_snapshots__noun_help@password.snap
---
source: tests/help_snapshots.rs
expression: out
---
Password strength scoring (zxcvbn)

Usage: ubertool password [OPTIONS] <COMMAND>

Commands:
  score  Score a password's strength (zxcvbn)
  help   Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
