tests/snapshots/help_snapshots__noun_help@pdf.snap
---
source: tests/help_snapshots.rs
expression: out
---
PDF utilities (signature info extraction)

Usage: ubertool pdf [OPTIONS] <COMMAND>

Commands:
  signature  Extract signature info from a PDF; optionally verify integrity
  help       Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
