tests/snapshots/help_snapshots__noun_help@percentage.snap
---
source: tests/help_snapshots.rs
expression: out
---
Percentage calculations (of / change / of-total)

Usage: ubertool percentage [OPTIONS] <COMMAND>

Commands:
  of        Compute "<percent>% of <value>"
  change    Compute percentage change from <from> to <to>
  of-total  Compute what percent <part> is of <total>
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
