tests/snapshots/help_snapshots__noun_help@phone.snap
---
source: tests/help_snapshots.rs
expression: out
---
Phone number parser (E.164 and regional formats)

Usage: ubertool phone [OPTIONS] <COMMAND>

Commands:
  parse  Parse a phone number and emit structured info
  help   Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
